manifests/apps/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-cloudflare-prod"
spec:
  ingressClassName: cilium
  tls:
  - hosts:
    - argocd.wpcapp.net
    secretName: argocd-tls-secret
  rules:
  - host: argocd.wpcapp.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
